--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts"
   },
   "dependencies": {
+    "@types/multer": "^1.4.7",
     "@types/uuid": "^8.3.4",
     "express": "^4.18.1",
+    "multer": "^1.4.5-lts.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
