--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,17 @@
 version: "3.9"
 services:
+  database_rentx:
+    image: postgres
+    container_name: database_rentx
+    restart: always
+    ports:
+      - 5432:5432
+    environment:
+      - POSTGRES_USER=docker
+      - POSTGRES_PASSWORD=ignite
+      - POSTGRES_DB=rentx
+    volumes:
+      - pgdata:/data/postgres
   app:
     build: .
     container_name: rentx
@@ -7,3 +19,7 @@ services:
       - "3333:3333"
     volumes:
       - .:/usr/app
+
+volumes:
+  pgdata:
+    driver: local
